--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -12,68 +12,31 @@ header {
 
 
 .welcome {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(7, 1fr);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 
         h1 { 
             @include fontSize(85);
-            margin-bottom: 20px;
-            grid-area: 1 / 1 / 3 / 8;
-            padding: 20px; 
+
         }
 
-        span { 
-            grid-area: 3 / 3 / 4 / 6; 
-
-            &:nth-of-type(2) {
-                grid-area: 3 / 3 / 4 / 6;
-                margin-top: 35px;       
-            }    
-        }
+        p { 
+            @include fontSize(30);
+            letter-spacing: 5px;
+            margin: 25px auto;
+        }   
         
-
-        form { 
-            grid-area: 4 / 3 / 6 / 6; 
-            display: flex;
-            flex-direction: column;
-
-            input[type=text] {
-                padding: 10px 50px;
-                margin-bottom: 20px;
-
-                &::placeholder {
-                    letter-spacing: 8px;
-                }
-            }
-
-            input[type=submit] {
-                padding: 10px 30px;
-                width: 80%;
-                align-self: center;
-            }
+        button {
+            height: 50px;
+            width: 250px;
+            border-radius: 2px;
         }
 
 }
 
 
-.letsGo  {
-    grid-area: 6 / 3 / 8 / 6; 
-
-    p {
-        @include fontSize(35);
-        margin: 30px 0;
-        background-color:
-        black;
-        padding: 20px;
-        
-    
-    }
-}
-
-input[type=text]::placeholder {
-    @include fontSize(25);
-}
 
 @media (max-width: 805px){
     .welcome {
