Tweaked JS and variables

--- a/styles/scss/_variablesMixins.scss
+++ b/styles/scss/_variablesMixins.scss
@@ -5,10 +5,9 @@
 
 
 // Vapor Colours
-    $vaporGold: #ffa818;
-    $vaporOrange: #f06000;
-    $vaporPink:#f00078;
-    $vaporPurple: #a800c0;
+    $vaporAccent: #ffa818;
+    $vaporFocus: #f06000;
+    $vaporHove:#f00078;
 
 
 // https://www.houstonwinefest.com/twilight-sunset-color-palette-2/
