--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -1,6 +1,5 @@
 // Question Container
 .question {
-    display: none;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,11 +40,11 @@ input[type=text]:focus,
 input[type=submit]:focus,
 label:focus, 
 button:focus{
-    outline: 2px solid $vaporOrange;
+    outline: 2px solid $vaporFocus;
 }
 
 label:hover{
-    border: 3px solid $vaporPink;
+    border: 3px solid $vaporHover;
 }
 
 .questionBox {
@@ -112,3 +111,6 @@ label:hover{
 
 }
 
+
+
+// Create a bpoint at 970 for the square sizes
