--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -90,4 +90,10 @@ h3 {
 footer {
     background-color: $black;
     text-align: center;
+    
+    a {
+        font-size: 1.6rem;
+        font-style: italic;
+
+    }
 }
