--- a/styles/scss/_variablesMixins.scss
+++ b/styles/scss/_variablesMixins.scss
@@ -7,7 +7,7 @@
 // Vapor Colours
     $vaporAccent: #ffa818;
     $vaporFocus: #f06000;
-    $vaporHove:#f00078;
+    $vaporHover:#f00078;
 
 
 // https://www.houstonwinefest.com/twilight-sunset-color-palette-2/
