--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -5,8 +5,18 @@
     justify-content: center;
     align-items: center;
     
-    img {
-        height: 300px;
+    .option-container {
+        flex: 1 0 calc(25% - 40px);
+        width: 20%;
+        
+        &:nth-of-type(2) {
+            margin: 0px 20px;
+        }
+        
+        label {
+            
+            height: 300px;
+        }
     }
     
     h2 { 
@@ -16,10 +26,11 @@
        
     }
 
-    .next{ 
+    button { 
         height: 50px;
         margin-top: 40px;
-        padding: 0 40px
+        padding: 0 40px;
+
     } 
 
 }
@@ -30,26 +41,22 @@ input[type=radio]{
 }
 
 
-label {
-    flex: 1 0 33%;
-}
+// label {
+//     flex: 1 0 33%;
+// }
 
 
 input[type=radio]:focus,
-input[type=text]:focus,
 input[type=submit]:focus,
 label:focus, 
 button:focus{
     outline: 2px solid $vaporFocus;
 }
 
-label:hover{
-    border: 3px solid $vaporHover;
-}
 
 .questionBox {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
@@ -77,18 +84,21 @@ label:hover{
 
         form {
 
-            flex-direction: column;
-
             label {
                 max-width: 525px;
                 width: 80%;
                 margin: 0 auto;
 
             }
+
+            .option-container {
+                flex: 1 0 calc(50% - 40px);
+                width: 45%;
+            }
         }
 
         .next {
-            width: 100%;
+            width: 70%;
         }
 
     }
