--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -6,11 +6,15 @@
     align-items: center;
     
     .option-container {
-        flex: 1 0 calc(25% - 40px);
+        flex: 1 0 calc(50% - 40px);
         width: 20%;
         
         &:nth-of-type(2) {
             margin: 0px 20px;
+        }
+
+        &:nth-of-type(3) {
+            margin-right: 20px;
         }
         
         label {
@@ -36,17 +40,12 @@
 }
 
 
-input[type=radio]{
+input[type=checkbox]{
     opacity: 0;
 }
 
 
-// label {
-//     flex: 1 0 33%;
-// }
-
-
-input[type=radio]:focus,
+input[type=checkbox]:focus,
 input[type=submit]:focus,
 label:focus, 
 button:focus{
@@ -76,6 +75,10 @@ button:focus{
             @include fontSize(35);
             text-align: center;
         }
+
+        .option-container:nth-of-type(2) {
+            margin: 0 0 0 20px;
+        }
     }
 }
 
@@ -90,18 +93,20 @@ button:focus{
                 margin: 0 auto;
 
             }
-
+            
             .option-container {
                 flex: 1 0 calc(50% - 40px);
                 width: 45%;
-            }
-        }
 
+            
+            }
+        
+        }
         .next {
             width: 70%;
         }
 
-    }
+}
 }
 
 @media (max-width: 450px){
@@ -123,4 +128,3 @@ button:focus{
 
 
 
-// Create a bpoint at 970 for the square sizes
