--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -6,7 +6,7 @@
     align-items: center;
     
     .option-container {
-        flex: 1 0 calc(50% - 40px);
+        flex: 1 0 calc(25% - 40px);
         width: 20%;
         
         &:nth-of-type(2) {
@@ -17,10 +17,6 @@
             margin-right: 20px;
         }
         
-        label {
-            
-            height: 300px;
-        }
     }
     
     h2 { 
@@ -30,22 +26,16 @@
        
     }
 
-    button { 
-        height: 50px;
-        margin-top: 40px;
-        padding: 0 40px;
-
-    } 
-
 }
 
 
 input[type=checkbox]{
     opacity: 0;
+    visibility: hidden;
 }
 
 
-input[type=checkbox]:focus,
+// input[type=checkbox]:focus,
 input[type=submit]:focus,
 label:focus, 
 button:focus{
@@ -76,55 +66,35 @@ button:focus{
             text-align: center;
         }
 
-        .option-container:nth-of-type(2) {
-            margin: 0 0 0 20px;
+        .option-container {
+            flex: 1 0 calc(50% - 40px);
+            width: 45%;
+
+        
+            &:nth-of-type(2) {
+                margin: 0 0 0 20px;
+            }
+        }
+
+        .next {
+            width: 50%;
+            position: relative;
+            left: 25%;
         }
     }
 }
 
-@media (max-width: 580px){
+@media (max-width: 630px){
     .question {
-
-        form {
-
-            label {
-                max-width: 525px;
-                width: 80%;
-                margin: 0 auto;
-
-            }
-            
-            .option-container {
-                flex: 1 0 calc(50% - 40px);
-                width: 45%;
-
-            
-            }
-        
-        }
-        .next {
-            width: 70%;
-        }
-
-}
-}
-
-@media (max-width: 450px){
-
-    .question {
-        
         h2 {
             @include fontSize(32);
             
         }
-
-        form {
-            flex-direction: column;
-        }
-
+        
     }
-
 }
+
+
 
 
 
