--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -35,7 +35,7 @@ input[type=checkbox]{
 }
 
 
-// input[type=checkbox]:focus,
+input[type=checkbox]:focus,
 input[type=submit]:focus,
 label:focus, 
 button:focus{
