Start Over button

--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -80,6 +80,7 @@ button:focus{
             width: 50%;
             position: relative;
             left: 25%;
+            margin-bottom: 30px;
         }
     }
 }
