--- a/styles/scss/_resultBox.scss
+++ b/styles/scss/_resultBox.scss
@@ -118,6 +118,10 @@ h3 {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url(../quizAssets/b-result.jpg);
 }
 
+.redo {
+    margin: 30px auto;
+    width: 70%;
+}
 
 
 
@@ -128,6 +132,10 @@ h3 {
     .result {
         h3 {
             @include fontSize(40);
+        }
+
+        .redo {
+            @include fontSize(15);
         }
     }
 }
