--- a/styles/scss/_questionBox.scss
+++ b/styles/scss/_questionBox.scss
@@ -35,12 +35,18 @@ input[type=checkbox]{
 }
 
 
-input[type=checkbox]:focus,
+// input[type=checkbox]:focus,
 input[type=submit]:focus,
 label:focus, 
 button:focus{
     outline: 2px solid $vaporFocus;
 }
+
+// Chrome Rendering
+label:focus {
+    border: 2px solid $vaporFocus;
+}
+
 
 
 .questionBox {
